Made changes following the cross-review comments